# prism

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: daily_inference.yml
TASKS/: 00_setup.md  01_data_collection.md  02_matching.md  03_metdata.md  04_exploring_bm_unit_matches.md  05_fitting_asset_power_curves.md  06_unmixing_supplier_bmunits.md  07_orchestration.md  08_ui.md
data/: GSP_regions_4326_20250109_simplified.geojson  assignment.json  bm_unit_catalogue.parquet  dukes_5_11.csv  dukes_clean.csv  extra_locations.csv  fits-solar.json  fits-wind.json  matches.csv  missing_bm_unit_details.parquet  netablob.html  netalist.html
notebooks/: 04_explore_bm_units.ipynb
prism/: assignment.py  bmdata.py  cli.py  fetch.py  fit.py  inference.py  met.py  solar.py  wind.py
scripts/: build_groups.py  fetch_b1610_generation.py  fetch_bm_unit_catalogue.py  fetch_era5_uk.py  fetch_missing_bm_unit_details.py  match_dukes_to_bm_units.py  prepare_dukes.py  prepare_plants_json.py
ui/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
ui/src/: App.tsx  colors.ts  config.ts  styles.css  types.ts  utils.ts
ui/src/components/: DetailPanel.tsx  GenerationChart.tsx  MapPanel.tsx
ui/src/hooks/: useData.ts
