[project]
name = "prism"
version = "0.1.0"
description = "Modelling UK energy supply by unmixing the dark side of the BMUnit."
requires-python = ">=3.13"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "geopandas",
    "rich",
    "rapidfuzz",
    "xarray>=2026.2.0",
    "zarr>=3.1.5",
    "gcsfs>=2026.2.0",
    "numpy>=2.4.3",
    "cftime>=1.6.5",
    "scipy>=1.17.1",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
